--- a/style.css
+++ b/style.css
@@ -222,5 +222,17 @@ section.contact-form{
     border-color: #ced4da;
 }
 
+/* .footer */
+
+footer {
+    text-align: center;
+}
+footer a{
+    color: #A4BC46;
+    text-decoration: none;
+}
+footer a:hover{
+    color: #A4BC46;
+}
 
 
